# python-photo-tools

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/photo_tools/: clean_unpaired_raws.py  cli.py  exceptions.py  logging_config.py  optimise.py  organise_by_date.py  organise_by_type.py  separate_raws.py  soft_delete_unpaired_raws.py
src/photo_tools/cli_support/: cli_errors.py  cli_reporter.py  cli_version.py
src/photo_tools/commands/: clean_unpaired_raws.py  keep_five_star_raws.py  optimise.py  organise_by_date.py  separate_raws.py
src/photo_tools/core/: dependencies.py  validation.py
src/photo_tools/image/: file_types.py  metadata.py  optimisation.py  raw_utils.py
tests/: test_clean_unpaired_raws.py  test_cli.py  test_keep_five_star_raws.py  test_optimise.py  test_organise_by_date.py  test_separate_raws.py  test_validation.py
tests/image/: test_file_types.py  test_optimisation.py
