[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "photo-tools"
version = "0.1.0"
description = "Python CLI tools for photography workflows"
requires-python = ">=3.13"
dependencies = ["typer>=0.24,<1.0", "pillow>=12.1,<13.0"]

[dependency-groups]
dev = ["pytest>=9,<10"]

[project.scripts]
photo-tools = "photo_tools.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
